compiler-core/parsing/tests/snapshots/parser__newtype_variables.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..60
      ModuleHeader@0..29
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..23
          UPPER@7..23 "NewtypeVariables"
        Annotation@23..24
          TEXT@23..24 " "
        WHERE@24..29 "where"
      LAYOUT_START@29..29 ""
      ModuleStatements@29..59
        NewtypeEquation@29..59
          Annotation@29..31
            TEXT@29..31 "\n\n"
          NEWTYPE@31..38 "newtype"
          Annotation@38..39
            TEXT@38..39 " "
          UPPER@39..41 "Mu"
          TypeVariableBinding@41..43
            Annotation@41..42
              TEXT@41..42 " "
            LOWER@42..43 "f"
          Annotation@43..44
            TEXT@43..44 " "
          EQUAL@44..45 "="
          DataConstructor@45..59
            Annotation@45..46
              TEXT@45..46 " "
            UPPER@46..48 "In"
            TypeParenthesized@48..59
              Annotation@48..49
                TEXT@48..49 " "
              LEFT_PARENTHESIS@49..50 "("
              TypeApplicationChain@50..58
                TypeVariable@50..51
                  LOWER@50..51 "f"
                TypeParenthesized@51..58
                  Annotation@51..52
                    TEXT@51..52 " "
                  LEFT_PARENTHESIS@52..53 "("
                  TypeApplicationChain@53..57
                    TypeConstructor@53..55
                      QualifiedName@53..55
                        UPPER@53..55 "Mu"
                    TypeVariable@55..57
                      Annotation@55..56
                        TEXT@55..56 " "
                      LOWER@56..57 "f"
                  RIGHT_PARENTHESIS@57..58 ")"
              RIGHT_PARENTHESIS@58..59 ")"
      LAYOUT_END@59..59 ""
      Annotation@59..60
        TEXT@59..60 "\n"
      END_OF_FILE@60..60 ""
    ,
    [],
)
