compiler-core/parsing/tests/snapshots/parser__operator_chain_prefixed.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..148
      ModuleHeader@0..34
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..28
          UPPER@7..28 "OperatorChainPrefixed"
        Annotation@28..29
          TEXT@28..29 " "
        WHERE@29..34 "where"
      LAYOUT_START@34..34 ""
      ModuleStatements@34..147
        ValueEquation@34..66
          Annotation@34..36
            TEXT@34..36 "\n\n"
          LOWER@36..46 "expression"
          Unconditional@46..66
            Annotation@46..47
              TEXT@46..47 " "
            EQUAL@47..48 "="
            WhereExpression@48..66
              ExpressionOperatorChain@48..66
                ExpressionInteger@48..50
                  Annotation@48..49
                    TEXT@48..49 " "
                  INTEGER@49..50 "1"
                ExpressionOperatorPair@50..56
                  TermOperator@50..54
                    Annotation@50..51
                      TEXT@50..51 " "
                    QualifiedName@51..54
                      Qualifier@51..53
                        TEXT@51..53 "L."
                      OPERATOR@53..54 ":"
                  ExpressionInteger@54..56
                    Annotation@54..55
                      TEXT@54..55 " "
                    INTEGER@55..56 "2"
                ExpressionOperatorPair@56..66
                  TermOperator@56..60
                    Annotation@56..57
                      TEXT@56..57 " "
                    QualifiedName@57..60
                      Qualifier@57..59
                        TEXT@57..59 "L."
                      OPERATOR@59..60 ":"
                  ExpressionConstructor@60..66
                    Annotation@60..61
                      TEXT@60..61 " "
                    QualifiedName@61..66
                      Qualifier@61..63
                        TEXT@61..63 "L."
                      UPPER@63..66 "Nil"
        LAYOUT_SEPARATOR@66..66 ""
        ValueEquation@66..104
          Annotation@66..68
            TEXT@66..68 "\n\n"
          LOWER@68..74 "binder"
          FunctionBinders@74..94
            BinderParenthesized@74..94
              Annotation@74..75
                TEXT@74..75 " "
              LEFT_PARENTHESIS@75..76 "("
              BinderOperatorChain@76..93
                BinderVariable@76..77
                  LOWER@76..77 "a"
                BinderOperatorPair@77..83
                  TermOperator@77..81
                    Annotation@77..78
                      TEXT@77..78 " "
                    QualifiedName@78..81
                      Qualifier@78..80
                        TEXT@78..80 "L."
                      OPERATOR@80..81 ":"
                  BinderVariable@81..83
                    Annotation@81..82
                      TEXT@81..82 " "
                    LOWER@82..83 "b"
                BinderOperatorPair@83..93
                  TermOperator@83..87
                    Annotation@83..84
                      TEXT@83..84 " "
                    QualifiedName@84..87
                      Qualifier@84..86
                        TEXT@84..86 "L."
                      OPERATOR@86..87 ":"
                  BinderConstructor@87..93
                    Annotation@87..88
                      TEXT@87..88 " "
                    QualifiedName@88..93
                      Qualifier@88..90
                        TEXT@88..90 "L."
                      UPPER@90..93 "Nil"
              RIGHT_PARENTHESIS@93..94 ")"
          Unconditional@94..104
            Annotation@94..95
              TEXT@94..95 " "
            EQUAL@95..96 "="
            WhereExpression@96..104
              ExpressionOperatorChain@96..104
                ExpressionVariable@96..98
                  Annotation@96..97
                    TEXT@96..97 " "
                  QualifiedName@97..98
                    LOWER@97..98 "a"
                ExpressionOperatorPair@98..104
                  TermOperator@98..102
                    Annotation@98..99
                      TEXT@98..99 " "
                    QualifiedName@99..102
                      Qualifier@99..101
                        TEXT@99..101 "S."
                      OPERATOR@101..102 "+"
                  ExpressionVariable@102..104
                    Annotation@102..103
                      TEXT@102..103 " "
                    QualifiedName@103..104
                      LOWER@103..104 "b"
        LAYOUT_SEPARATOR@104..104 ""
        TypeSynonymEquation@104..147
          Annotation@104..106
            TEXT@104..106 "\n\n"
          TYPE@106..110 "type"
          Annotation@110..111
            TEXT@110..111 " "
          UPPER@111..115 "Type"
          Annotation@115..116
            TEXT@115..116 " "
          EQUAL@116..117 "="
          TypeOperatorChain@117..147
            TypeConstructor@117..125
              Annotation@117..118
                TEXT@117..118 " "
              QualifiedName@118..125
                UPPER@118..125 "Integer"
            TypeOperatorPair@125..137
              TypeOperator@125..129
                Annotation@125..126
                  TEXT@125..126 " "
                QualifiedName@126..129
                  Qualifier@126..128
                    TEXT@126..128 "L."
                  OPERATOR@128..129 ":"
              TypeConstructor@129..137
                Annotation@129..130
                  TEXT@129..130 " "
                QualifiedName@130..137
                  UPPER@130..137 "Integer"
            TypeOperatorPair@137..147
              TypeOperator@137..141
                Annotation@137..138
                  TEXT@137..138 " "
                QualifiedName@138..141
                  Qualifier@138..140
                    TEXT@138..140 "L."
                  OPERATOR@140..141 ":"
              TypeConstructor@141..147
                Annotation@141..142
                  TEXT@141..142 " "
                QualifiedName@142..147
                  Qualifier@142..144
                    TEXT@142..144 "L."
                  UPPER@144..147 "Nil"
      LAYOUT_END@147..147 ""
      Annotation@147..148
        TEXT@147..148 "\n"
      END_OF_FILE@148..148 ""
    ,
    [],
)
