compiler-core/parsing/tests/snapshots/parser__type_arrow.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..61
      ModuleHeader@0..22
        MODULE@0..6 "module"
        ModuleName@6..16
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..16 "TypeArrow"
        Annotation@16..17
          TEXT@16..17 " "
        WHERE@17..22 "where"
      LAYOUT_START@22..22 ""
      ModuleStatements@22..60
        ValueSignature@22..39
          Annotation@22..24
            TEXT@22..24 "\n\n"
          LOWER@24..29 "arrow"
          Annotation@29..30
            TEXT@29..30 " "
          DOUBLE_COLON@30..32 "::"
          TypeArrow@32..39
            TypeConstructor@32..34
              Annotation@32..33
                TEXT@32..33 " "
              QualifiedName@33..34
                UPPER@33..34 "A"
            Annotation@34..35
              TEXT@34..35 " "
            RIGHT_ARROW@35..37 "->"
            TypeConstructor@37..39
              Annotation@37..38
                TEXT@37..38 " "
              QualifiedName@38..39
                UPPER@38..39 "B"
        LAYOUT_SEPARATOR@39..39 ""
        ValueSignature@39..60
          Annotation@39..40
            TEXT@39..40 "\n"
          LOWER@40..45 "arrow"
          Annotation@45..46
            TEXT@45..46 " "
          DOUBLE_COLON@46..48 "::"
          TypeArrow@48..60
            TypeConstructor@48..50
              Annotation@48..49
                TEXT@48..49 " "
              QualifiedName@49..50
                UPPER@49..50 "A"
            Annotation@50..51
              TEXT@50..51 " "
            RIGHT_ARROW@51..53 "->"
            TypeArrow@53..60
              TypeConstructor@53..55
                Annotation@53..54
                  TEXT@53..54 " "
                QualifiedName@54..55
                  UPPER@54..55 "B"
              Annotation@55..56
                TEXT@55..56 " "
              RIGHT_ARROW@56..58 "->"
              TypeConstructor@58..60
                Annotation@58..59
                  TEXT@58..59 " "
                QualifiedName@59..60
                  UPPER@59..60 "C"
      LAYOUT_END@60..60 ""
      Annotation@60..61
        TEXT@60..61 "\n"
      END_OF_FILE@61..61 ""
    ,
    [],
)
