compiler-core/parsing/tests/snapshots/parser__type_integer.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..55
      ModuleHeader@0..24
        MODULE@0..6 "module"
        ModuleName@6..18
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..18 "TypeInteger"
        Annotation@18..19
          TEXT@18..19 " "
        WHERE@19..24 "where"
      LAYOUT_START@24..24 ""
      ModuleImports@24..24
      ModuleStatements@24..54
        ValueSignature@24..40
          Annotation@24..26
            TEXT@24..26 "\n\n"
          LOWER@26..33 "integer"
          Annotation@33..34
            TEXT@33..34 " "
          DOUBLE_COLON@34..36 "::"
          TypeInteger@36..40
            Annotation@36..37
              TEXT@36..37 " "
            INTEGER@37..40 "123"
        LAYOUT_SEPARATOR@40..40 ""
        ValueSignature@40..54
          Annotation@40..41
            TEXT@40..41 "\n"
          LOWER@41..48 "negated"
          Annotation@48..49
            TEXT@48..49 " "
          DOUBLE_COLON@49..51 "::"
          TypeInteger@51..54
            Annotation@51..52
              TEXT@51..52 " "
            MINUS@52..53 "-"
            INTEGER@53..54 "1"
      LAYOUT_END@54..54 ""
      Annotation@54..55
        TEXT@54..55 "\n"
      END_OF_FILE@55..55 ""
    ,
    [],
)
