compiler-core/parsing/tests/snapshots/parser__type_kinded.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..42
      ModuleHeader@0..23
        MODULE@0..6 "module"
        ModuleName@6..17
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..17 "TypeKinded"
        Annotation@17..18
          TEXT@17..18 " "
        WHERE@18..23 "where"
      LAYOUT_START@23..23 ""
      ModuleImports@23..23
      ModuleStatements@23..41
        ValueSignature@23..41
          Annotation@23..25
            TEXT@23..25 "\n\n"
          LOWER@25..31 "kinded"
          Annotation@31..32
            TEXT@31..32 " "
          DOUBLE_COLON@32..34 "::"
          TypeKinded@34..41
            TypeConstructor@34..36
              QualifiedName@34..36
                Annotation@34..35
                  TEXT@34..35 " "
                UPPER@35..36 "T"
            Annotation@36..37
              TEXT@36..37 " "
            DOUBLE_COLON@37..39 "::"
            TypeConstructor@39..41
              QualifiedName@39..41
                Annotation@39..40
                  TEXT@39..40 " "
                UPPER@40..41 "T"
      LAYOUT_END@41..41 ""
      Annotation@41..42
        TEXT@41..42 "\n"
      END_OF_FILE@42..42 ""
    ,
    [],
)
