compiler-core/parsing/tests/snapshots/parser__type_operator_name.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..52
      ModuleHeader@0..29
        MODULE@0..6 "module"
        ModuleName@6..23
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..23 "TypeOperatorName"
        Annotation@23..24
          TEXT@23..24 " "
        WHERE@24..29 "where"
      LAYOUT_START@29..29 ""
      ModuleStatements@29..51
        ValueSignature@29..51
          Annotation@29..31
            TEXT@29..31 "\n\n"
          LOWER@31..44 "operator_name"
          Annotation@44..45
            TEXT@44..45 " "
          DOUBLE_COLON@45..47 "::"
          TypeOperator@47..51
            QualifiedName@47..51
              Annotation@47..48
                TEXT@47..48 " "
              OPERATOR_NAME@48..51 "(+)"
      LAYOUT_END@51..51 ""
      Annotation@51..52
        TEXT@51..52 "\n"
      END_OF_FILE@52..52 ""
    ,
    [],
)
